--- a/app/src/main/res/layout/b_setting_layout.xml
+++ b/app/src/main/res/layout/b_setting_layout.xml
@@ -255,7 +255,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#fff"
-                        android:hint="1234567890"
+                        android:hint=""
                         android:textColor="@color/txt_666666"
                         android:textSize="@dimen/value_16sp" />
 
@@ -281,7 +281,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#fff"
-                        android:hint="1234567890"
+                        android:hint=""
                         android:textColor="@color/txt_666666"
                         android:textSize="@dimen/value_16sp" />
 
@@ -306,7 +306,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#fff"
-                        android:hint="1234567890"
+                        android:hint=""
                         android:textColor="@color/txt_666666"
                         android:textSize="@dimen/value_16sp" />
 
