--- a/app/src/main/res/layout/b_gpssafecenter_layout.xml
+++ b/app/src/main/res/layout/b_gpssafecenter_layout.xml
@@ -95,6 +95,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/open_close"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="关闭防盗模式"
