--- a/app/src/main/res/layout/find_labour_list_child_item.xml
+++ b/app/src/main/res/layout/find_labour_list_child_item.xml
@@ -38,14 +38,18 @@
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/find_labour_list_child_open_comment_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="展开评论"
             android:textColor="@color/txt_666666" />
 
         <ImageView
+            android:id="@+id/find_labour_list_child_open_comment_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/value_3dp"
             android:src="@mipmap/open_comment" />
     </LinearLayout>
 
