--- a/app/src/main/res/layout/b_setting_layout.xml
+++ b/app/src/main/res/layout/b_setting_layout.xml
@@ -141,224 +141,180 @@
                 android:layout_height="10dp"
                 android:background="#f2f1f1" />
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/sleep_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_40dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
                 android:paddingLeft="@dimen/value_10dp"
-                android:paddingRight="@dimen/value_10dp">
+                android:background="#fff"
+                android:paddingRight="@dimen/value_10dp"
+                >
 
                 <ImageView
+                    android:id="@+id/sleepPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/value_10dp"
+                    android:layout_centerVertical="true"
                     android:src="@mipmap/set_sleep" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="熄火后电瓶取电时长："
-                    android:textColor="@color/txt_333333"
-                    android:textSize="@dimen/value_16sp" />
 
-                <EditText
-                    android:id="@+id/hourId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:textColor="@color/txt_333333"
-                    android:textSize="@dimen/value_16sp" />
+                <ImageView
+                    android:layout_width="@dimen/value_10dp"
+                    android:layout_height="@dimen/value_20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/right_direction_grey" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="小时："
+                    android:text="熄火后电瓶取电时长"
                     android:textColor="@color/txt_333333"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/sleepPic"
                     android:textSize="@dimen/value_16sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="right|center_vertical"
-                    android:orientation="vertical">
 
-                    <CheckBox
-                        android:id="@+id/sleep_checkbox"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/set_btn_bg"
-                        android:button="@null"
-                        android:checked="true" />
+            </RelativeLayout>
 
-                </LinearLayout>
-
-
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="#f2f1f1" />
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/sos_layout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/value_50dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/value_10dp">
+                android:layout_height="@dimen/value_40dp"
+                android:paddingLeft="@dimen/value_10dp"
+                android:background="#fff"
+                android:paddingRight="@dimen/value_10dp"
+                >
 
                 <ImageView
+                    android:id="@+id/sosPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/value_10dp"
+                    android:layout_centerVertical="true"
                     android:src="@mipmap/set_bell" />
+
+
+                <ImageView
+                    android:layout_width="@dimen/value_10dp"
+                    android:layout_height="@dimen/value_20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/right_direction_grey" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="报警电话设置"
                     android:textColor="@color/txt_333333"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/sosPic"
                     android:textSize="@dimen/value_16sp" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/value_10dp"
-                android:background="#f2f1f1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/value_10dp">
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/value_20dp"
-                    android:padding="@dimen/value_10dp">
+            </RelativeLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/value_5dp"
-                        android:text="车主本人："
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
 
-                    <EditText
-                        android:id="@+id/chezhuPhoneId"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#fff"
-                        android:hint=""
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/value_20dp"
-                    android:padding="@dimen/value_10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/value_5dp"
-                        android:gravity="center"
-                        android:text="家        人："
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
-
-                    <EditText
-                        android:id="@+id/jiarenPhoneId"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#fff"
-                        android:hint=""
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/value_20dp"
-                    android:padding="@dimen/value_10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/value_5dp"
-                        android:text="朋        友："
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
-
-                    <EditText
-                        android:id="@+id/pengyouPhoneId"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#fff"
-                        android:hint=""
-                        android:textColor="@color/txt_666666"
-                        android:textSize="@dimen/value_16sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="#f2f1f1" />
 
-            <LinearLayout
+
+
+            <RelativeLayout
+                android:id="@+id/weilan_layout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/value_50dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/value_10dp">
+                android:layout_height="@dimen/value_40dp"
+                android:paddingLeft="@dimen/value_10dp"
+                android:background="#fff"
+                android:paddingRight="@dimen/value_10dp"
+                >
 
                 <ImageView
+                    android:id="@+id/weilanPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/value_10dp"
+                    android:layout_centerVertical="true"
                     android:src="@mipmap/set_weilan" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="电子围栏："
-                    android:textColor="@color/txt_333333"
-                    android:textSize="@dimen/value_16sp" />
 
-                <EditText
-                    android:id="@+id/mileterId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/txt_333333"
-                    android:textSize="@dimen/value_14sp" />
+                <ImageView
+                    android:layout_width="@dimen/value_10dp"
+                    android:layout_height="@dimen/value_20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/right_direction_grey" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="m"
+                    android:text="电子围栏"
                     android:textColor="@color/txt_333333"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/weilanPic"
                     android:textSize="@dimen/value_16sp" />
-            </LinearLayout>
+
+
+            </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="10dp"
                 android:background="#f2f1f1" />
+
+            <RelativeLayout
+                android:id="@+id/baoyang_layout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/value_40dp"
+                android:paddingLeft="@dimen/value_10dp"
+                android:background="#fff"
+                android:paddingRight="@dimen/value_10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/baoyangPic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/value_10dp"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/icon_baoyanglicheng" />
+
+
+                <ImageView
+                    android:layout_width="@dimen/value_10dp"
+                    android:layout_height="@dimen/value_20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/right_direction_grey" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="保养里程"
+                    android:textColor="@color/txt_333333"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/baoyangPic"
+                    android:textSize="@dimen/value_16sp" />
+
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="#f2f1f1" />
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
