--- a/app/src/main/res/layout/withdraw_his_layout.xml
+++ b/app/src/main/res/layout/withdraw_his_layout.xml
@@ -22,7 +22,7 @@
         android:id="@+id/noData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="暂无警情"
+        android:text="暂无记录"
         android:gravity="center"
         android:textSize="16sp"
         android:textColor="@color/txt_666666"
