--- a/app/src/main/res/layout/b_setting_layout.xml
+++ b/app/src/main/res/layout/b_setting_layout.xml
@@ -70,7 +70,6 @@
                         android:textColor="@color/txt_666666"
                         android:textSize="@dimen/value_14sp" />
 
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/value_30dp"
@@ -145,17 +144,16 @@
                 android:id="@+id/sleep_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_40dp"
-                android:paddingLeft="@dimen/value_10dp"
                 android:background="#fff"
-                android:paddingRight="@dimen/value_10dp"
-                >
+                android:paddingLeft="@dimen/value_10dp"
+                android:paddingRight="@dimen/value_10dp">
 
                 <ImageView
                     android:id="@+id/sleepPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/value_10dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/value_10dp"
                     android:src="@mipmap/set_sleep" />
 
 
@@ -169,13 +167,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="熄火后电瓶取电时长"
-                    android:textColor="@color/txt_333333"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/sleepPic"
+                    android:text="熄火后电瓶取电时长"
+                    android:textColor="@color/txt_333333"
                     android:textSize="@dimen/value_16sp" />
-
-
             </RelativeLayout>
 
 
@@ -188,17 +184,16 @@
                 android:id="@+id/sos_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_40dp"
-                android:paddingLeft="@dimen/value_10dp"
                 android:background="#fff"
-                android:paddingRight="@dimen/value_10dp"
-                >
+                android:paddingLeft="@dimen/value_10dp"
+                android:paddingRight="@dimen/value_10dp">
 
                 <ImageView
                     android:id="@+id/sosPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/value_10dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/value_10dp"
                     android:src="@mipmap/set_bell" />
 
 
@@ -212,15 +207,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="报警电话设置"
-                    android:textColor="@color/txt_333333"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/sosPic"
+                    android:text="报警电话设置"
+                    android:textColor="@color/txt_333333"
                     android:textSize="@dimen/value_16sp" />
-
-
             </RelativeLayout>
-
 
 
             <View
@@ -228,25 +220,21 @@
                 android:layout_height="10dp"
                 android:background="#f2f1f1" />
 
-
-
             <RelativeLayout
                 android:id="@+id/weilan_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_40dp"
-                android:paddingLeft="@dimen/value_10dp"
                 android:background="#fff"
-                android:paddingRight="@dimen/value_10dp"
-                >
+                android:paddingLeft="@dimen/value_10dp"
+                android:paddingRight="@dimen/value_10dp">
 
                 <ImageView
                     android:id="@+id/weilanPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/value_10dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/value_10dp"
                     android:src="@mipmap/set_weilan" />
-
 
                 <ImageView
                     android:layout_width="@dimen/value_10dp"
@@ -258,13 +246,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="电子围栏"
-                    android:textColor="@color/txt_333333"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/weilanPic"
+                    android:text="电子围栏"
+                    android:textColor="@color/txt_333333"
                     android:textSize="@dimen/value_16sp" />
-
-
             </RelativeLayout>
 
             <View
@@ -276,19 +262,17 @@
                 android:id="@+id/baoyang_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_40dp"
-                android:paddingLeft="@dimen/value_10dp"
                 android:background="#fff"
-                android:paddingRight="@dimen/value_10dp"
-                >
+                android:paddingLeft="@dimen/value_10dp"
+                android:paddingRight="@dimen/value_10dp">
 
                 <ImageView
                     android:id="@+id/baoyangPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/value_10dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/value_10dp"
                     android:src="@mipmap/icon_baoyanglicheng" />
-
 
                 <ImageView
                     android:layout_width="@dimen/value_10dp"
@@ -300,12 +284,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="保养里程"
-                    android:textColor="@color/txt_333333"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/baoyangPic"
+                    android:text="保养里程"
+                    android:textColor="@color/txt_333333"
                     android:textSize="@dimen/value_16sp" />
-
 
             </RelativeLayout>
 
@@ -313,8 +296,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="#f2f1f1" />
-
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -359,10 +340,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="#f2f1f1" />
-
         </LinearLayout>
-
     </ScrollView>
-
-
 </LinearLayout>
