--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +9,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        >
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/value_10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/value_10dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -82,19 +82,17 @@
                         android:id="@+id/register_radio_button_1"
                         android:layout_width="@dimen/value_20dp"
                         android:layout_height="@dimen/value_20dp"
-                        android:checked="true"
-                        android:button="@null"
                         android:background="@drawable/register_radio_btn_style"
-                        />
+                        android:button="@null"
+                        android:checked="true" />
 
                     <RadioButton
                         android:id="@+id/register_radio_button_2"
                         android:layout_width="@dimen/value_20dp"
                         android:layout_height="@dimen/value_20dp"
                         android:layout_marginTop="@dimen/value_30dp"
-                        android:button="@null"
                         android:background="@drawable/register_radio_btn_style"
-                        />
+                        android:button="@null" />
                 </RadioGroup>
 
                 <LinearLayout
@@ -177,8 +175,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/value_10dp"
                     android:background="@mipmap/get_verify_code"
-                    android:padding="@dimen/value_5dp"
                     android:gravity="center"
+                    android:padding="@dimen/value_5dp"
                     android:text="获取验证码"
                     android:textColor="@color/txt_white"
                     android:textSize="@dimen/value_13sp" />
@@ -288,6 +286,38 @@
             </LinearLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/value_5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/register_agree_rule_chebox"
+                android:layout_width="@dimen/value_15dp"
+                android:layout_height="@dimen/value_15dp"
+                android:layout_marginLeft="@dimen/value_15dp"
+                android:background="@drawable/register_radio_btn_style"
+                android:button="@null"
+                android:checked="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/value_5dp"
+                android:text="我已阅读并同意"
+                android:textColor="@color/txt_999999"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/register_agree_rule_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="使用条款和隐私政策"
+                android:textColor="@color/main_color"
+                android:textSize="10sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
@@ -295,14 +325,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/value_10dp"
         android:layout_marginBottom="@dimen/value_10dp"
         android:layout_marginLeft="@dimen/value_40dp"
         android:layout_marginRight="@dimen/value_40dp"
+        android:layout_marginTop="@dimen/value_10dp"
         android:background="@mipmap/register_register_back"
         android:gravity="center"
+        android:padding="@dimen/value_15dp"
         android:text="注册"
         android:textColor="@color/txt_white"
         android:textSize="@dimen/value_16sp"
-        android:padding="@dimen/value_15dp"/>
+        android:visibility="visible" />
 </LinearLayout>
