--- a/app/src/main/res/layout/sell_thing_list_group_item.xml
+++ b/app/src/main/res/layout/sell_thing_list_group_item.xml
@@ -34,7 +34,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="需要:"
+                    android:text="需:"
                     android:textColor="@color/main_color" />
 
                 <TextView
