--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/value_10dp"
-                    android:text="卖东西"
+                    android:text="买卖东西"
                     android:textColor="@color/txt_white"
                     android:textSize="@dimen/value_16sp" />
             </LinearLayout>
