--- a/app/src/main/res/layout/nopayorder_list_item.xml
+++ b/app/src/main/res/layout/nopayorder_list_item.xml
@@ -108,6 +108,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/no_pay_list_item_take_time_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="取件时间："
