--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -24,10 +24,10 @@
 
         <TextView
             android:id="@+id/modify_password_get_code_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/value_80dp"
+            android:layout_height="@dimen/value_30dp"
             android:layout_alignParentRight="true"
-            android:background="@mipmap/get_verify_code"
+            android:background="@mipmap/register_register_back"
             android:gravity="center"
             android:text="获取验证码"
             android:textColor="@color/txt_white"
