--- a/app/src/main/res/layout/sell_thing_list_group_item.xml
+++ b/app/src/main/res/layout/sell_thing_list_group_item.xml
@@ -77,7 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
 
         <ImageView
@@ -87,7 +87,7 @@
             android:layout_marginLeft="@dimen/value_10dp"
             android:layout_marginRight="@dimen/value_10dp"
             android:layout_weight="1"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
 
         <ImageView
@@ -95,7 +95,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
     </LinearLayout>
 
