--- a/app/src/main/res/layout/take_care_mileage.xml
+++ b/app/src/main/res/layout/take_care_mileage.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/txt_white"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="保养里程"
             android:textColor="@color/txt_666666"
-            android:textSize="@dimen/value_14sp"
-            />
+            android:textSize="@dimen/value_14sp" />
+
         <EditText
             android:id="@+id/take_care_mileage_edit"
             android:layout_width="@dimen/value_100dp"
             android:layout_height="wrap_content"
-            android:numeric="decimal"
             android:gravity="center"
-            android:text="0"
-            />
+            android:numeric="decimal"
+            android:text="0" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="KM"
             android:numeric="decimal"
+            android:text="公里"
             android:textColor="@color/txt_666666"
-            android:textSize="@dimen/value_14sp"
-            />
+            android:textSize="@dimen/value_14sp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/value_3dp"
+        android:gravity="center"
+        android:text="(输入整数，输入0表示关闭此功能)"
+        android:textColor="@color/txt_999999" />
 </LinearLayout>
